# secret-store-cli

./: .gitignore  Cargo.toml  EXAMPLE.md  README.md  build-darwin-universal.sh
.github/workflows/: ci.yml
scripts/: build-darwin-universal.sh
src/: args.rs  bytes.rs  dependency.rs  document_key.rs  errors.rs  helpers.rs  lib.rs  main.rs  metadata.rs  provenance.rs  secretstore.rs  util.rs
src/cmd/: address.rs  decrypt.rs  encrypt.rs  mod.rs
