[package]
name = "secret-store-cli"
version = "0.0.1"
authors = ["Kazuaki Ishiguro <kazuakiishiguro@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.10.1"
ethereum-types = "0.6.0"
ethkey = "0.3.0"
ethcore-accounts = { git = "https://github.com/paritytech/parity-ethereum" }
ethstore = { git = "http://github.com/paritytech/parity-ethereum" }
hex = "0.3.2"
hyper = "0.12.33"
ipfs-api = "0.5.1"
jsonrpc-core = "13.1.0"
jsonrpc-core-client = "13.1.0"
jsonrpc-derive = "13.1.0"
jsonrpc-pubsub = "13.1.0"
parity-bytes = "0.1.0"
parity-crypto = "0.4.0"
rand = "0.7.0"
reqwest = "0.9.20"
ring = "0.16.9"
rpassword = "4.0.1"
rustc-hex = "2.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3.0"
tiny-keccak = "1.5.0"
url = "2.1.0"

[patch.crates-io]
ethkey = { git = "https://github.com/paritytech/parity-ethereum" }
